--- a/index.html
+++ b/index.html
@@ -1839,7 +1839,7 @@
 <li class="width-100">
 <a class="scale-on-hover text-1 row horz-align-left nowrap color-charcoal hover-no-underline text-no-underline vert-align-middle radius-small hover-bg-purple-light padding-horz-xsmall padding-vert-xxsmall" href="provider/udemy.html">
 <img alt="Udemy Logo" class="radius" data-src="ccweb.imgix.net\https\www.classcentral.com/images/logos/providers/udemy-trn-sq6b36.png?auto=format&amp;cs=strip&amp;fit=&amp;h=50&amp;ixlib=php-3.3.1&amp;w=50&amp;s=918f4790c5c5818a022e23be21061434" src="ccweb.imgix.net\https\www.classcentral.com/images/logos/providers/udemy-trn-sqd9e7.png?auto=format&amp;blur=200&amp;cs=strip&amp;fit=&amp;h=50&amp;ixlib=php-3.3.1&amp;px=16&amp;w=50&amp;s=3683868b4f1d2268e0295daca76448bc" width="50"/>
-<strong class="margin-left-xsmall fill-space">Udemy</strong>
+<strong class="margin-left-xsmall fill-space">उदेमी</strong>
 </a>
 </li>
 <li class="width-100">
@@ -2146,7 +2146,7 @@ TechCrunch 0 0 114 57
 <div class="row large-up-nowrap vert-align-top border-bottom border-gray padding-bottom-medium margin-bottom-medium">
 <div>
 <h3>
-<a class="head-3 weight-semi line-tight color-charcoal" data-track-click="homepage_click" data-track-props='{ "type": "MOOC Report", "title": "Udemy Lays Off ~200 Staff, After Being Only Major Player to Avoid Layoffs in 2022", "sub_section": "Latest Articles" }' href="report/udemy-layoffs/index.html">Udemy 2022 में छंटनी से बचने के लिए केवल प्रमुख खिलाड़ी होने के बाद ~ 200 कर्मचारियों को छोड़ देता है</a>
+<a class="head-3 weight-semi line-tight color-charcoal" data-track-click="homepage_click" data-track-props='{ "type": "MOOC Report", "title": "Udemy Lays Off ~200 Staff, After Being Only Major Player to Avoid Layoffs in 2022", "sub_section": "Latest Articles" }' href="report/udemy-layoffs/index.html">उदेमी 2022 में छंटनी से बचने के लिए केवल प्रमुख खिलाड़ी होने के बाद ~ 200 कर्मचारियों को छोड़ देता है</a>
 </h3>
 <div class="row nowrap">
 <div>
@@ -2206,7 +2206,7 @@ TechCrunch 0 0 114 57
 <div class="row large-up-nowrap vert-align-top padding-bottom-medium margin-bottom-medium">
 <div>
 <h3>
-<a class="head-3 weight-semi line-tight color-charcoal" data-track-click="homepage_click" data-track-props='{ "type": "MOOC Report", "title": "202K Courses, 662M Enrollments: Breaking Down Udemy’s Massive Catalog", "sub_section": "Latest Articles" }' href="report/udemy-by-the-numbers/index.html">202K पाठ्यक्रम, 662M नामांकन: Udemy की विशाल कैटलॉग को तोड़ना</a>
+<a class="head-3 weight-semi line-tight color-charcoal" data-track-click="homepage_click" data-track-props='{ "type": "MOOC Report", "title": "202K Courses, 662M Enrollments: Breaking Down Udemy’s Massive Catalog", "sub_section": "Latest Articles" }' href="report/udemy-by-the-numbers/index.html">202K पाठ्यक्रम, 662M नामांकन: उदेमी की विशाल कैटलॉग को तोड़ना</a>
 </h3>
 <div class="row nowrap">
 <div>
@@ -2416,7 +2416,7 @@ TechCrunch 0 0 114 57
 <a class="color-charcoal" href="provider/swayam.html">स्वयं</a>
 </li>
 <li class="margin-vert-xxsmall">
-<a class="color-charcoal" href="provider/udemy.html">Udemy</a>
+<a class="color-charcoal" href="provider/udemy.html">उदेमी</a>
 </li>
 <li class="margin-vert-xxsmall">
 <a class="color-charcoal" href="provider/linkedin-learning.html">लिंक्डइन लर्निंग</a>
@@ -2499,7 +2499,7 @@ TechCrunch 0 0 114 57
 <a class="color-charcoal" href="report/edx-top-courses/index.html">सभी समय के 100 शीर्ष नि: शुल्क EDX पाठ्यक्रम</a>
 </li>
 <li class="margin-vert-xxsmall">
-<a class="color-charcoal" href="report/udemy-top-courses/index.html">सभी समय के 250 शीर्ष udemy पाठ्यक्रम</a>
+<a class="color-charcoal" href="report/udemy-top-courses/index.html">सभी समय के 250 शीर्ष उदेमी पाठ्यक्रम</a>
 </li>
 </ul>
 </div>
